remove unneeded imports and additional clean up